Finalizado a pagina sobre

--- a/sobre.html
+++ b/sobre.html
@@ -58,8 +58,35 @@
     </header>
     
     <main class="container">
-      Sobre
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a class="breadcrumb-other-pages" href="./index.html">Início</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Sobre nós</li>
+        </ol>
+      </nav>
 
+      <div class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white image-about-us">
+        <h1 class="mb-3 h2">SOBRE NÓS</h1> 
+        <p class="lead">A House Paint, presente no mercado paranaense desde 1990, é uma das empresas líderes no segmento de pinturas em geral na cidade de Chapecó e região. A empresa atua nos segmentos acabamentos, gessos decorativos e pinturas de áreas internas ou externas de residências com finíssimo acabamento e qualidade.</p>
+      </div>
+    </div>
+      <hr class="featurette-divider">
+      <div>
+        <h5>Visão</h5>
+        <p>Ser reconhecida, pela qualidade dos serviços prestados e pelo desenvolvimento constante de seus colaboradores, como a melhor empresa de pintura no seu segmento.</p>
+      </div>
+      <div>
+        <h5>Missão</h5>
+        <p>Oferecer serviços de qualidade respeitando os prazos e as metas estabelecidas por seus clientes.</p>
+      </div>
+      <div>
+        <h5>Valores</h5>
+        <ul>
+          <li>Respeitar o ser humano.</li>
+          <li>Agir e crescer de forma ética e sustentável.</li>
+          <li>Fazer bem feito e cada vez melhor.</li>
+        </ul>
+      </div>
       <hr class="featurette-divider">
       <footer class="container">
         <p class="float-end"><a href="#" class="back-to-top">Voltar ao topo <i class="fas fa-arrow-up"></i></a></p>
