Adicionada outra fonte e criada tela de contatos

--- a/contatos.html
+++ b/contatos.html
@@ -8,6 +8,9 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 
@@ -58,8 +61,31 @@
     </header>
     
     <main class="container">
-      Contatos
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a class="breadcrumb-other-pages" href="./index.html">Início</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Contatos</li>
+        </ol>
+      </nav>
 
+      <div class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white image-contatos">
+        <h1 class="mb-3 h2">CONTATOS</h1> 
+        <p class="lead text-contatos">Fique a vontade para entrar em contato com a gente, solicitar um orçamento ou tirar suas dúvidas.</p>
+      </div>
+      
+      <hr class="featurette-divider">
+      <div>
+        <ul>
+          <li><strong>Endereço: </strong>Av. Nereu Ramos, 3777D - Seminário, Chapecó - SC, 89813-000</li>
+          <li><strong>Horário de atendimento: </strong> 07:00 às 19:00 de segunda à sábado</li>
+          <li><strong>Telefone: </strong> (49) 3319-2600</li>
+          <li><strong>E-mail: </strong>contato@housepaint.com.br</li>
+          <li><strong>Site: </strong><a href="./index.html">www.housepaint.com.br</a></li>
+        </ul>
+      </div>
+      <div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3550.691833278512!2d-52.601528234950344!3d-27.134514733032557!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94e4b14117760671%3A0x1a60f67df52e7515!2sAv.%20Nereu%20Ramos%2C%203777D%20-%20Semin%C3%A1rio%2C%20Chapec%C3%B3%20-%20SC%2C%2089813-000!5e0!3m2!1spt-BR!2sbr!4v1630541154722!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      </div>
       <hr class="featurette-divider">
       <footer class="container">
         <p class="float-end"><a href="#" class="back-to-top">Voltar ao topo <i class="fas fa-arrow-up"></i></a></p>
