--- a/sobre.html
+++ b/sobre.html
@@ -8,6 +8,9 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 
@@ -69,7 +72,6 @@
         <h1 class="mb-3 h2">SOBRE NÓS</h1> 
         <p class="lead">A House Paint, presente no mercado paranaense desde 1990, é uma das empresas líderes no segmento de pinturas em geral na cidade de Chapecó e região. A empresa atua nos segmentos acabamentos, gessos decorativos e pinturas de áreas internas ou externas de residências com finíssimo acabamento e qualidade.</p>
       </div>
-    </div>
       <hr class="featurette-divider">
       <div>
         <h5>Visão</h5>
