Adicionada pagina de clientes

--- a/clientes.html
+++ b/clientes.html
@@ -52,16 +52,87 @@
               </li>
             </ul>
             <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Faz um Google" aria-label="Search">
+              <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Procurar</button>
             </form>
           </div>
         </div>
       </nav>
     </header>
-    
+
     <main class="container">
-      Clientes
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a class="breadcrumb-other-pages" href="./index.html">Início</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Clientes</li>
+        </ol>
+      </nav>
+
+      <div class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white image-clientes">
+        <h1 class="mb-3 h2">Clientes</h1> 
+        <p class="lead">Aqui você pode visualizar as imagens de alguns serviços já realizados pela House Paint ao longo do tempo, recomendamos aos nossos clientes a visualização das fotos e também recomendamos visitas técnicas em algumas obras para que verifiquem como nossa equipe trabalha.</p>
+      </div>
+
+      <hr class="featurette-divider">
+      
+      <h3>Opiniões e depoimentos de alguns clientes</h3>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <img src="./images/outras/person.jpg" class="card-img-top" alt="silhueta de uma pessoa">
+            <div class="card-body">
+              <blockquote class="blockquote mb-0">
+                <p class="card-text-blockquote">Fiquei satisfeito com os serviços de pintura da House Paint. É uma empresa comprometida com a satisfação do cliente e isso é fundamental pra mim.</p>
+                <footer class="blockquote-footer">Tulio Lemos Veloso Machado <cite title="Source Title">Source Title</cite></footer>
+              </blockquote>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="./images/outras/person.jpg" class="card-img-top" alt="silhueta de uma pessoa">
+            <div class="card-body">
+              <blockquote class="blockquote mb-0">
+                <p class="card-text-blockquote">A House Paint estava certa sobre o orçamento. Disseram-me o custo para pintar minha casa e entregaram exatamente o que eles disseram que seria. Uma raridade nos dias de hoje.</p>
+                <footer class="blockquote-footer">Rodrigo Pacheco <cite title="Source Title">Source Title</cite></footer>
+              </blockquote>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="./images/outras/person.jpg" class="card-img-top" alt="silhueta de uma pessoa">
+            <div class="card-body">
+              <blockquote class="blockquote mb-0">
+                <p class="card-text-blockquote">Muito obrigado! Estou 100% satisfeito com o trabalho. Eles fizeram um trabalho grande, profissional. Meus agradecimentos à equipe por seu bom trabalho e profissionalismo.</p>
+                <footer class="blockquote-footer">Norberto Antunes <cite title="Source Title">Source Title</cite></footer>
+              </blockquote>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="./images/outras/person.jpg" class="card-img-top" alt="silhueta de uma pessoa">
+            <div class="card-body">
+              <blockquote class="blockquote mb-0">
+                <p class="card-text-blockquote">Quando eu chamei a empresa House Paint para fazer a pintura e acabamentos da minha casa, o prazo era o aspecto fundamental. Eu precisava ter esse serviço em um tempo específico e todos me deram um prazo maior. A House Paint fez o trabalho no prazo prometido.</p>
+                <footer class="blockquote-footer">Raquel Andrade <cite title="Source Title">Source Title</cite></footer>
+              </blockquote>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="./images/outras/person.jpg" class="card-img-top" alt="silhueta de uma pessoa">
+            <div class="card-body">
+              <blockquote class="blockquote mb-0">
+                <p class="card-text-blockquote">Quando falei com o funcionário da House Paint responsável pelo orçamento, eu tinha dois outros pintores vindo fazer o orçamento, mas eu cancelei a visita deles. Eu estava totalmente a vontade e sentia que o funcionário da House Paint estava sendo honesto.</p>
+                <footer class="blockquote-footer">Kas & Natalie Melowsky <cite title="Source Title">Source Title</cite></footer>
+              </blockquote>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <hr class="featurette-divider">
       <footer class="container">
