--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               </li>
             </ul>
             <form class="d-flex" action="https://www.google.com/search" method="GET">
-              <input class="form-control me-2" type="search" placeholder="Faz um Google" aria-label="Search" name="q">
+              <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Search" name="q">
               <button class="btn btn-outline-success" type="submit">Procurar</button>
             </form>
           </div>
