--- a/sobre.html
+++ b/sobre.html
@@ -52,7 +52,7 @@
               </li>
             </ul>
             <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Faz um Google" aria-label="Search">
+              <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Procurar</button>
             </form>
           </div>
