Feito mapa responsivo e adicionada pagina de servicos

--- a/servicos.html
+++ b/servicos.html
@@ -61,8 +61,198 @@
     </header>
     
     <main class="container">
-      Serviços
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a class="breadcrumb-other-pages" href="./index.html">Início</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Serviços</li>
+        </ol>
+      </nav>
 
+      <div class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white image-services">
+        <h1 class="mb-3 h2 text-services">Serviços</h1> 
+        <p class="lead text-services">A House Paint tem como princípio fundamental a extrema qualidade nos serviços prestados ao longo de sua história e atuação no segmento de acabamentos e pinturas residencias, veja a seguir quais serviços são prestados pela empresa que conta uma uma equipe de profissionais qualificados e sempre atualizados com as melhores técnicas e tecnologias existentes neste ramo de atuação.</p>
+      </div>
+
+      <hr class="featurette-divider">
+      <div class="row featurette">
+        <div class="col-md-7">
+          <div class="row featurette">
+            <div class="col-md-7">
+              <h2 class="featurette-heading">Acabamentos</h2>
+              <!-- Button trigger modal -->
+              <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Clique aqui
+              </button>
+
+              <!-- Modal -->
+              <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title color-modal-title" id="exampleModalLabel">Acabamentos</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                      <p>Nossa equipe realizada a instalação de gesso decorativo, com as melhores técnicas para reproduzir detalhes sofisticados em seus ambientes internos, molduras, rebaixamento de teto e multicamadas para iluminação. </p>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-5">
+          <img src="./images/servicos/acabamento-interno.jpg" width="500" height="430" alt="Acabamento de uma casa.">  
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+      <div class="row featurette">
+        <div class="col-md-7">
+          <div class="row featurette">
+            <div class="col-md-7">
+              <h2 class="featurette-heading">Gesso</h2>
+              <!-- Button trigger modal -->
+              <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Clique aqui
+              </button>
+
+              <!-- Modal -->
+              <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title color-modal-title" id="exampleModalLabel">Gesso</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                      <p>Nossa equipe realizada a instalação de gesso decorativo, com as melhores técnicas para reproduzir detalhes sofisticados em seus ambientes internos, molduras, rebaixamento de teto e multicamadas para iluminação. </p>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-5">
+          <img src="./images/servicos/instalacao-gesso.jpg" width="500" height="430" alt="Gesso de uma casa.">  
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+      <div class="row featurette">
+        <div class="col-md-7">
+          <div class="row featurette">
+            <div class="col-md-7">
+              <h2 class="featurette-heading">Pintura <span class="text-muted color-muted">de Grades e Aberturas.</span></h2>
+              <!-- Button trigger modal -->
+              <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Clique aqui
+              </button>
+
+              <!-- Modal -->
+              <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title color-modal-title" id="exampleModalLabel">Pintura de Grades e Aberturas</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                      <p>Utilizando materiais de alta qualidade e durabilidade a empresa realiza a pintura de grades, portões, portas e janelas internas ou externas.</p>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-5">
+          <img src="./images/servicos/pintura-grades-portoes.jpg" width="500" height="430" alt="Pintura de grade.">  
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+      <div class="row featurette">
+        <div class="col-md-7">
+          <div class="row featurette">
+            <div class="col-md-7">
+              <h2 class="featurette-heading">Pintura <span class="text-muted color-muted">externa.</span></h2>
+              <!-- Button trigger modal -->
+              <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Clique aqui
+              </button>
+
+              <!-- Modal -->
+              <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title color-modal-title" id="exampleModalLabel">Pintura Externa</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                      <p>A pintura externa residencial é realizada com extremo cuidado desde a limpeza e impermeabilização das superfícies até a pintura final sempre aplicando as melhores técnicas para que a qualidade do serviço não seja comprometida ao longo do tempo.</p>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-5">
+          <img src="./images/servicos/pintura-externa.jpg" width="500" height="430" alt="Pintura externa de uma casa.">  
+        </div>
+      </div>
+  
+      <hr class="featurette-divider">
+      <div class="row featurette">
+        <div class="col-md-7">
+          <div class="row featurette">
+            <div class="col-md-7">
+              <h2 class="featurette-heading">Pintura <span class="text-muted color-muted">interna.</span></h2>
+              <!-- Button trigger modal -->
+              <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Clique aqui
+              </button>
+
+              <!-- Modal -->
+              <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title color-modal-title" id="exampleModalLabel">Pintura Interna</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                      <p>Trabalhamos em obras novas e também em residências usadas, com foco total na qualidade para que o acabamento final seja impecável, a pintura interna conta com profissionais especializados para cada tipo de superfície: madeira, alvenaria, gesso, texturas e revestimentos especiais.</p>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-5">
+          <img src="./images/servicos/pintura-interna.jpg" width="500" height="430" alt="Pintura interna de uma casa.">  
+        </div>
+      </div>
+      
       <hr class="featurette-divider">
       <footer class="container">
         <p class="float-end"><a href="#" class="back-to-top">Voltar ao topo <i class="fas fa-arrow-up"></i></a></p>
