--- a/contatos.html
+++ b/contatos.html
@@ -83,8 +83,11 @@
           <li><strong>Site: </strong><a href="./index.html">www.housepaint.com.br</a></li>
         </ul>
       </div>
-      <div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3550.691833278512!2d-52.601528234950344!3d-27.134514733032557!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94e4b14117760671%3A0x1a60f67df52e7515!2sAv.%20Nereu%20Ramos%2C%203777D%20-%20Semin%C3%A1rio%2C%20Chapec%C3%B3%20-%20SC%2C%2089813-000!5e0!3m2!1spt-BR!2sbr!4v1630541154722!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+      <div class="container-fluid">
+        <div class="map-responsive">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3550.691833278512!2d-52.601528234950344!3d-27.134514733032557!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94e4b14117760671%3A0x1a60f67df52e7515!2sAv.%20Nereu%20Ramos%2C%203777D%20-%20Semin%C3%A1rio%2C%20Chapec%C3%B3%20-%20SC%2C%2089813-000!5e0!3m2!1spt-BR!2sbr!4v1630541154722!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
       </div>
       <hr class="featurette-divider">
       <footer class="container">
@@ -92,7 +95,7 @@
         <p class="copyright">&copy · 2021 · House Paint</p>
       </footer>
     </main>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
   </body>
 </html>
