Ajustadas paginas conforme solicitado na tarefa

--- a/sobre.html
+++ b/sobre.html
@@ -90,9 +90,20 @@
         </ul>
       </div>
       <hr class="featurette-divider">
+
+      <br />
+      <br />
+      <br />
+      
+      <h4>Site desenvolvido para a disciplina de Fundamentos ao Desenvolvimento Web.</h4>
+      <h5>Isabela Maria Da Campo</h5>
+      <p>Clique <a href="./HousePaint.zip">aqui</a> para download do projeto e <a href="https://github.com/IsabelaDaCampo" target="_blank">aqui</a> para me seguir no GitHub</p>
+
+
+      <hr class="featurette-divider">
       <footer class="container">
         <p class="float-end"><a href="#" class="back-to-top">Voltar ao topo <i class="fas fa-arrow-up"></i></a></p>
-        <p class="copyright">&copy · 2021 · House Paint</p>
+        <p class="copyright">&copy · 2021 · House Paint · FDW · Isabela Maria Da Campo</p>
       </footer>
     </main>
     
