--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       <hr class="featurette-divider">
       <footer class="container">
         <p class="float-end"><a href="#" class="back-to-top">Voltar ao topo <i class="fas fa-arrow-up"></i></a></p>
-        <p class="copyright">&copy · 2021 · House Paint</p>
+        <p class="copyright">&copy · 2021 · House Paint · FDW · Isabela Maria Da Campo</p>
       </footer>
     </main>
     
